Thetablocks page works nicely.

--- a/lmfdb/jacobi_forms/templates/dimensions/jf-dimensions.html
+++ b/lmfdb/jacobi_forms/templates/dimensions/jf-dimensions.html
@@ -18,7 +18,7 @@
 <h2>New search for dimensions</h2>
 {% include 'dimensions/jf-form.html' %}
 
-<h1>Miscellaneous</h1>
+<h1>Explanations</h1>
 {% include ['dimensions/jf-misc.html', 'jf-Not_available.html'] %}
 
 {% endblock %}
