--- a/lmfdb/jacobi_forms/templates/modules/jf-modules.html
+++ b/lmfdb/jacobi_forms/templates/modules/jf-modules.html
@@ -18,7 +18,7 @@
 <h2>New search for modules</h2>
 {% include 'modules/jf-form.html' %}
 
-<h1>Miscellaneous</h1>
+<h1>Explanations</h1>
 {% include ['modules/jf-misc.html', 'jf-Not_available.html'] %}
 
 {% endblock %}
