--- a/lmfdb/jacobi_forms/templates/thetablocks/jf-thetablocks.html
+++ b/lmfdb/jacobi_forms/templates/thetablocks/jf-thetablocks.html
@@ -1,6 +1,8 @@
 {% extends 'homepage.html' %}
 {% block content %}
 
+<h1> Data for thetablocks</h1>
+
 {% if error %}
 <div class="announce error">Error: {{  error }}</div>
 {% else %}
@@ -15,5 +17,8 @@
 
 <h2>New search for theta blocks</h2>
 {% include 'thetablocks/jf-form.html' %}
+
+<h1>Explanations</h1>
+{% include ['thetablocks/jf-misc.html', 'jf-Not_available.html'] %}
 
 {% endblock %}
