Cleaned up the home page.

--- a/lmfdb/jacobi_forms/templates/dimensions/jf-form.html
+++ b/lmfdb/jacobi_forms/templates/dimensions/jf-form.html
@@ -9,21 +9,39 @@
     <tr>
       <td> 
 	<label>weight(s)</label>
+      </td>
+      <td>
 	<input type="text" id="weight_field" placeholder="6+20" pattern="[\d\.\+\,\ ]+" />
+      </td>
+      <td>
 	<span class="formexample">e.g. 2 or 20+10 or 20+26 4</span>
       </td>
+      <td></td>
+    </tr>
+    <tr>
       <td> 
-	<label>*index</label>
+	<label>index *</label>
+      </td>
+      <td>
 	<input type="text" id="index_field" placeholder="E_6" required />
+      </td>
+      <td>
 	<span class="formexample">e.g. 2 or [2,1,4] or A_4</span>
       </td>
+      <td></td>
+    </tr>
+    <tr>
       <td> 
 	<label>character(s)</label>
+      </td>
+      <td>
 	<input type="text" id="character_field" placeholder="0+23" pattern="[\d\+\,\ ]+" />
+      </td>
+      <td>
 	<span class="formexample">e.g. 2 or 2 4 6 or 0+23</span>
       </td>
       <td> 
-	<button type="submit" value="submit">Find</button>
+	<button type="submit" value="submit">Search</button>
       </td>
     </tr>
   </table> 
