--- a/lmfdb/jacobi_forms/templates/eigenforms/jf-form.html
+++ b/lmfdb/jacobi_forms/templates/eigenforms/jf-form.html
@@ -8,22 +8,40 @@
   <table> 
     <tr>
       <td> 
-	<label>*weight(s)</label>
+	<label>weight(s) *</label>
+      </td>
+      <td>
 	<input type="text" id="weight_field" placeholder="6+20" pattern="[\d\.\+\ ]+" required />
+      </td>
+      <td>
 	<span class="formexample">e.g. 2 or 20+10 or 20+26 4</span>
       </td>
+      <td></td>
+    </tr>
+    <tr>
       <td> 
-	<label>*index(es)</label>
+	<label>index(es) *</label>
+      </td>
+      <td>
 	<input type="text" id="index_field" placeholder="6+20" required />
+      </td>
+      <td>
 	<span class="formexample">e.g. 2 or 20+10 or 20+26 4</span>
       </td>
+      <td></td>
+    </tr>
+    <tr>
       <td> 
-	<label>*eigenvalues(s)</label>
-	<input type="text" id="eigenvalue_field" placeholder="0" required />
+	<label>eigenvalues(s)</label>
+      </td>
+      <td>
+	<input type="text" id="eigenvalue_field" placeholder="0" />
+      </td>
+      <td>
 	<span class="formexample">e.g. 2 or 2 4 6 or 0+23 4</span>
       </td>
       <td> 
-	<button type="submit" value="submit">Find</button>
+	<button type="submit" value="submit">Search</button>
       </td>
     </tr>
   </table> 
