--- a/lmfdb/jacobi_forms/templates/jf-index.html
+++ b/lmfdb/jacobi_forms/templates/jf-index.html
@@ -1,71 +1,159 @@
 {% extends 'homepage.html' %}
 {% block content %}
+
+{% macro weight( k) -%}
+{% if 0.5 == k %}
+$\tfrac 12$
+{% else %}
+${{ k|int }}{% if k|int != k %}\tfrac 12{% endif %}$
+{% endif %}
+{%- endmacro %}
+
 <p>
-  Blabla
-  </a>
+  This location provides data concerning Jacobi forms of scalar and lattice index over the elliptic modular group.
 </p> 
 
 <h2>Browse
-  <a class="knowl-title" knowl="mf.jacobi.module">
+  <a class="title" knowl="jf.jacobi_form">
     Jacobi forms
   </a>
 </h2>
 <p>
-  By collection:
-  {% for col in cols_with_forms|sort( attribute = 'order') %}
-  <a href="{{ col.name() }}">
-    ${{ col.latex_name() }}$ 
-  </a>
-  &nbsp;
-  {% endfor %}
-</p>
-<p>
+  {#
   By weight:
   {% set d = { 1:9,10:19,20:29,30:39,40:49,50:99} %}
   {% for n in d|sort %}
   <a href = "{{ url_for( 'JacobiForm_Q_top_level', page='search_results', query='{\"weight\":{ \"$gte\":\"' ~ n ~ '\", \"$lte\":\"' ~ d[n] ~'\"}}') }}">${{ n }}$-${{ d[n] }}$</a>
-  {% endfor %}  
+  {% endfor %}
+  #}
+  By weight:
+  {% set wts = [0.5, 1, 1.5, 2, 2.5]  %}
+  {% for wt in wts %}
+  {% if wts[-1] == wt %}
+  <a href = "{{ url_for( 'JacobiForm_Q_top_level', page='search_results', query='{\"rank\":\"' ~ wt ~ '\"}') }}">{{ weight( wt) }}$\dots$</a>
+  {% else %}
+  <a href = "{{ url_for( 'JacobiForm_Q_top_level', page='search_results', query='{\"weight\":{ \"$gte\":\"' ~ wt ~ '\", \"$lte\":\"' ~ wt ~'\"}}') }}">{{ weight( wt) }}</a>
+  {% endif %}
+  {% endfor %}
 </p>
 <p>
-  By index:
-  {% for n in [2,3,4] %}
-  <a href = "{{ url_for( 'JacobiForm_Q_top_level', page='search_results', query='{\"degree\":\"' ~ n ~ '\"}') }}">${{ n }}$</a>
+  By rank of index:
+  {% set ixs = [1,2,3,4,5,6] %}
+  {% for ix in ixs %}
+  {% if ixs[-1] == ix %}
+  <a href = "{{ url_for( 'JacobiForm_Q_top_level', page='search_results', query='{\"rank\":\"' ~ ix ~ '\"}') }}">${{ ix }}\dots$</a>
+  {% else %}
+  <a href = "{{ url_for( 'JacobiForm_Q_top_level', page='search_results', query='{\"rank\":\"' ~ ix ~ '\"}') }}">${{ ix }}$</a>
+  {% endif %}
   {% endfor %}
 </p>
 <p>
   By character:
-  {% for n in range(24) %}
-  <a href = "{{ url_for( 'JacobiForm_Q_top_level', page='search_results', query='{\"degree\":\"' ~ n ~ '\"}') }}">${{ n }}$</a>
+  {% for c in range(24) %}
+  <a href = "{{ url_for( 'JacobiForm_Q_top_level', page='search_results', query='{\"char\":\"' ~ c ~ '\"}') }}">${{ c }}$</a>
   {% endfor %}
 </p>
 
 </br>
 
-<h2>Browse modules of Jacobi forms</h2>
+<h2>Browse <a class="title" knowl="jf.module">modules of Jacobi forms</a></h2>
 <p>
+  {#
   {% for col in cols|sort( attribute = 'order') %}
   <a href="{{ col.name() }}">
     ${{ col.latex_name() }}$
   </a>
   &nbsp;
   {% endfor %}
+  #}
+  By rank of index:
+  {% set ixs = [1,2,3,4,5,6] %}
+  {% for ix in ixs %}
+  {% if ixs[-1] == ix %}
+  <a href = "{{ url_for( 'JacobiForm_Q_top_level', page='search_results', query='{\"rank\":\"' ~ ix ~ '\"}') }}">${{ ix }}\dots$</a>
+  {% else %}
+  <a href = "{{ url_for( 'JacobiForm_Q_top_level', page='search_results', query='{\"rank\":\"' ~ ix ~ '\"}') }}">${{ ix }}$</a>
+  {% endif %}
+  {% endfor %}  
 </p>
 
 <br/>
 
-<h2>Search for dimensions</h2>
-<p>{% include 'dimensions/jf-form.html' %}</p>
+{#
+<table>
+  <tr valign="top">
+    <td>
+      <h2>Search for dimensions</h2>
+      <p>{% include 'dimensions/jf-form.html' %}</p>
+    </td>
+    <td>
+      <h2>Search for modules</h2>
+      <p>{% include 'modules/jf-form.html' %}</p>
+    </td>
+  </tr>
+  <tr valign="top">
+    <td>
+      <h2>Find <a class="title" knowl="jf.theta_blocks">theta blocks</a></h2>
+      <p>{% include 'thetablocks/jf-form.html' %}</p>
+      <h2>Find singular forms</h2>
+      <p>{% include 'singular_forms/jf-form.html' %}</p>
+    </td>
+    <td>
+      <h2>Search for Hecke eigenforms</h2>
+      <p>{% include 'eigenforms/jf-form.html' %}</p>
+    </td>
+  </tr>
+</table>
+#}
 
-<h2>Search for modules</h2>
-<p>{% include 'modules/jf-form.html' %}</p>
+{# see http://www.html-cleaner.com/features/replace-html-table-tags-with-divs/
+for constructing tables using divs #}
+<style>
+.rTable { display: table; }
+.rTableRow { display: table-row; }
+.rTableHeading { display: table-header-group; }
+.rTableBody { display: table-row-group; }
+.rTableFoot { display: table-footer-group; }
+.rTableCell, .rTableHead { display: table-cell; }
 
-<h2>Search for theta blocks</h2>
-<p>{% include 'thetablocks/jf-form.html' %}</p>
+.rTableCell > h2
+{
+    font-family: sans-serif;
+    text-decoration: none;
+    font-size: 120%;
+    text-align: left;
+    font-weight: bold;
+    color: #292;
+    padding: 5px 0 5px 0;
+    margin: 15px 0 10px 0;
+}
 
-<h2>Search for singular forms</h2>
-<p>{% include 'singular_forms/jf-form.html' %}</p>
+</style>
 
-<h2>Search for Hecke eigenforms</h2>
-<p>{% include 'eigenforms/jf-form.html' %}</p>
+<div class="rTable">
+  <div class="rTableBody">
+    <div class="rTableRow">
+      <div class="rTableCell">
+	<h2>Search for dimensions</h2>
+	<p>{% include 'dimensions/jf-form.html' %}</p>
+      </div>
+      <div class="rTableCell">
+	<h2>Search for modules</h2>
+	<p>{% include 'modules/jf-form.html' %}</p>
+      </div>
+    </div>
+    <div class="rTableRow">
+      <div class="rTableCell">
+	<h2>Find <a class="title" knowl="jf.theta_block">theta blocks</a></h2>
+	<p>{% include 'thetablocks/jf-form.html' %}</p>
+      </div>
+      <div class="rTableCell">
+	<h2>Search for <a class="title" knowl="jf.Hecke_eigenform">Hecke eigenforms</a></h2>
+	<p>{% include 'eigenforms/jf-form.html' %}</p>
+      </div>
+    </div>
+  </div>
+</div>
 
+<p>Required fields are marked by an asterisk.</p>
 {% endblock %}
