--- a/lmfdb/jacobi_forms/templates/thetablocks/jf-form.html
+++ b/lmfdb/jacobi_forms/templates/thetablocks/jf-form.html
@@ -9,28 +9,59 @@
     <tr>
       <td> 
 	<label>weight(s)</label>
+      </td>
+      <td>
 	<input type="text" id="weight_field" placeholder="6+20" pattern="[\d\.\+\,\ ]+" />
+      </td>
+      <td>
 	<span class="formexample">e.g. 2 or 20+10 or 20+26 4</span>
       </td>
+      <td></td>
+    </tr>
+    <tr>
       <td> 
-	<label>*index(es)</label>
+	<label>index(es) *</label>
+      </td>
+      <td>
 	<input type="text" id="index_field" placeholder="A_2" />
+      </td>
+      <td>
 	<span class="formexample">e.g. 2*(Z<3>+F_4) + [1 1 2]</span>
       </td>
+      <td></td>
+    </tr>
+    <tr>
       <td> 
-	<label>character(s)</label>
-	<input type="text" id="character_field" placeholder="0" pattern="[\d\+\,\ ]+" />
-	<span class="formexample">e.g. 2 or 2 4 6 or 0+23 4</span>
+	<label>determinant(s) *</label>
       </td>
-      <td> 
-	<label>determinant(s)</label>
+      <td>
 	<input type="text" id="determinant_field" placeholder="0" pattern="[\d\+\,\ ]+" />
+      </td>
+      <td>
 	<span class="formexample">e.g. 2 or 2 4 6 or 1+10 4</span>
       </td>
+    </tr>
+    <tr>
       <td> 
 	<label>rank(s)</label>
+      </td>
+      <td>
 	<input type="text" id="rank_field" placeholder="0" pattern="[\d\+\,\ ]+" />
+      </td>
+      <td>
 	<span class="formexample">e.g. 2 or 2 4 6 or 1+10 4</span>
+      </td>
+      <td></td>
+    </tr>
+    <tr>
+      <td> 
+	<label>character(s)</label>
+      </td>
+      <td>
+	<input type="text" id="character_field" placeholder="0" pattern="[\d\+\,\ ]+" />
+      </td>
+      <td>
+	<span class="formexample">e.g. 2 or 2 4 6 or 0+23 4</span>
       </td>
       <td> 
 	<button type="submit" value="submit">Find</button>
