--- a/lmfdb/jacobi_forms/templates/eigenforms/jf-form.html
+++ b/lmfdb/jacobi_forms/templates/eigenforms/jf-form.html
@@ -1,5 +1,5 @@
 {% block javascript %}
-<script src = "/static/validate.js"></script>
+<script src = "/static/jf-validate.js"></script>
 {% endblock %}
 
 <form action="/JacobiForm/Q/eigenforms" method="get"
