--- a/lmfdb/jacobi_forms/templates/modules/jf-form.html
+++ b/lmfdb/jacobi_forms/templates/modules/jf-form.html
@@ -8,15 +8,14 @@
   <table> 
     <tr>
       <td> 
-	<label>index(es) *</label>
+	<label>index(es)</label>
       </td>
       <td>
-	<input type="text" id="index_field" placeholder="A_2" required />
+	<input type="text" id="index_field" placeholder="A_2" />
       </td>
       <td>
 	<span class="formexample">e.g. 2*(Z<3>+F_4) + [1 1 2]</span>
       </td>
-      <td></td>
     </tr>
     <tr>
       <td> 
@@ -28,6 +27,8 @@
       <td>
 	<span class="formexample">e.g. 2 or 2+4 or 0+23,2</span>
       </td>
+    </tr>
+    <tr>
       <td> 
 	<button type="submit" value="submit">Search</button>
       </td>
