--- a/lmfdb/jacobi_forms/templates/thetablocks/jf-thetablocks.html
+++ b/lmfdb/jacobi_forms/templates/thetablocks/jf-thetablocks.html
@@ -1,7 +1,10 @@
 {% extends 'homepage.html' %}
 {% block content %}
 
-<h1> Data for thetablocks</h1>
+<h2>New search for theta blocks</h2>
+{% include 'thetablocks/jf-form.html' %}
+
+<h2> Search results</h2>
 
 {% if error %}
 <div class="announce error">Error: {{  error }}</div>
@@ -15,10 +18,7 @@
 
 {% endif %}
 
-<h2>New search for theta blocks</h2>
-{% include 'thetablocks/jf-form.html' %}
-
-<h1>Explanations</h1>
+<h2>Explanations</h2>
 {% include ['thetablocks/jf-misc.html', 'jf-Not_available.html'] %}
 
 {% endblock %}
