--- a/lmfdb/jacobi_forms/templates/dimensions/jf-form.html
+++ b/lmfdb/jacobi_forms/templates/dimensions/jf-form.html
@@ -16,30 +16,30 @@
       <td>
 	<span class="formexample">e.g. 2 or 20+10 or 20+26 4</span>
       </td>
-      <td></td>
     </tr>
     <tr>
       <td> 
-	<label>index *</label>
+	<label>index</label>
       </td>
       <td>
-	<input type="text" id="index_field" placeholder="E_6" required />
+	<input type="text" id="index_field" placeholder="E_6"/>
       </td>
       <td>
 	<span class="formexample">e.g. 2 or [2,1,4] or A_4</span>
       </td>
-      <td></td>
     </tr>
     <tr>
       <td> 
 	<label>character(s)</label>
       </td>
       <td>
-	<input type="text" id="character_field" placeholder="0+23" pattern="[\d\+\,\ ]+" />
+	<input type="text" id="character_field" placeholder="0" pattern="[\d\+\,\ ]+" />
       </td>
       <td>
 	<span class="formexample">e.g. 2 or 2 4 6 or 0+23</span>
       </td>
+    </tr>
+    <tr>
       <td> 
 	<button type="submit" value="submit">Search</button>
       </td>
