--- a/lmfdb/jacobi_forms/templates/eigenforms/jf-form.html
+++ b/lmfdb/jacobi_forms/templates/eigenforms/jf-form.html
@@ -8,27 +8,25 @@
   <table> 
     <tr>
       <td> 
-	<label>weight(s) *</label>
+	<label>weight(s)</label>
       </td>
       <td>
-	<input type="text" id="weight_field" placeholder="6+20" pattern="[\d\.\+\ ]+" required />
+	<input type="text" id="weight_field" placeholder="6+20" pattern="[\d\.\+\ ]+" />
       </td>
       <td>
 	<span class="formexample">e.g. 2 or 20+10 or 20+26 4</span>
       </td>
-      <td></td>
     </tr>
     <tr>
       <td> 
-	<label>index(es) *</label>
+	<label>index(es)</label>
       </td>
       <td>
-	<input type="text" id="index_field" placeholder="6+20" required />
+	<input type="text" id="index_field" placeholder="6+20" />
       </td>
       <td>
 	<span class="formexample">e.g. 2 or 20+10 or 20+26 4</span>
       </td>
-      <td></td>
     </tr>
     <tr>
       <td> 
@@ -40,6 +38,19 @@
       <td>
 	<span class="formexample">e.g. 2 or 2 4 6 or 0+23 4</span>
       </td>
+    </tr>
+    <tr>
+      <td> 
+	<label>Label</label>
+      </td>
+      <td>
+	<input type="text" id="eigenvalue_field" placeholder="jf-11.2.1.a" />
+      </td>
+      <td>
+	<span class="formexample">e.g. 2 or 2 4 6 or 0+23 4</span>
+      </td>
+    </tr>
+    <tr>
       <td> 
 	<button type="submit" value="submit">Search</button>
       </td>
