--- a/lmfdb/jacobi_forms/templates/thetablocks/jf-form.html
+++ b/lmfdb/jacobi_forms/templates/thetablocks/jf-form.html
@@ -16,11 +16,10 @@
       <td>
 	<span class="formexample">e.g. 2 or 20+10 or 20+26 4</span>
       </td>
-      <td></td>
     </tr>
     <tr>
       <td> 
-	<label>index(es) *</label>
+	<label>index(es)</label>
       </td>
       <td>
 	<input type="text" id="index_field" placeholder="A_2" />
@@ -28,11 +27,10 @@
       <td>
 	<span class="formexample">e.g. 2*(Z<3>+F_4) + [1 1 2]</span>
       </td>
-      <td></td>
     </tr>
     <tr>
       <td> 
-	<label>determinant(s) *</label>
+	<label>determinant(s)</label>
       </td>
       <td>
 	<input type="text" id="determinant_field" placeholder="0" pattern="[\d\+\,\ ]+" />
@@ -51,7 +49,6 @@
       <td>
 	<span class="formexample">e.g. 2 or 2 4 6 or 1+10 4</span>
       </td>
-      <td></td>
     </tr>
     <tr>
       <td> 
@@ -63,6 +60,8 @@
       <td>
 	<span class="formexample">e.g. 2 or 2 4 6 or 0+23 4</span>
       </td>
+    </tr>
+    <tr>
       <td> 
 	<button type="submit" value="submit">Find</button>
       </td>
