--- a/lmfdb/jacobi_forms/templates/thetablocks/jf-form.html
+++ b/lmfdb/jacobi_forms/templates/thetablocks/jf-form.html
@@ -2,6 +2,8 @@
 <script src = "/static/jf-validate.js"></script>
 {% endblock %}
 
+{% if not args %}{% set args = {} %}{% endif %}
+
 <form action="/JacobiForm/Q/thetablocks" method="get"
       onSubmit="return pack_args( { 'weight_field': half_ints, 'index_field': index, 'character_field': mod24, 'determinant_field': pos_ints, 'rank_field': pos_ints})">
   <input type = "hidden" id = "args" name = "args" />
@@ -11,7 +13,7 @@
 	<label>weight(s)</label>
       </td>
       <td>
-	<input type="text" id="weight_field" placeholder="6+20" pattern="[\d\.\+\,\ ]+" />
+	<input type="text" id="weight_field" name="weight_field" value="{{ args.weight_field }}" placeholder="6+20" pattern="[\d\.\+\,\ ]+" />
       </td>
       <td>
 	<span class="formexample">e.g. 2 or 20+10 or 20+26 4</span>
@@ -22,7 +24,7 @@
 	<label>index(es)</label>
       </td>
       <td>
-	<input type="text" id="index_field" placeholder="A_2" />
+	<input type="text" id="index_field" name="index_field" value="{{ args.index_field }}" placeholder="A_2" />
       </td>
       <td>
 	<span class="formexample">e.g. 2*(Z<3>+F_4) + [1 1 2]</span>
@@ -33,7 +35,7 @@
 	<label>determinant(s)</label>
       </td>
       <td>
-	<input type="text" id="determinant_field" placeholder="0" pattern="[\d\+\,\ ]+" />
+	<input type="text" id="determinant_field" name="determinant_field" value="{{ args.determinant_field }}" placeholder="0" pattern="[\d\+\,\ ]+" />
       </td>
       <td>
 	<span class="formexample">e.g. 2 or 2 4 6 or 1+10 4</span>
@@ -44,7 +46,7 @@
 	<label>rank(s)</label>
       </td>
       <td>
-	<input type="text" id="rank_field" placeholder="0" pattern="[\d\+\,\ ]+" />
+	<input type="text" id="rank_field" name="rank_field" value="{{ args.rank_field }}" placeholder="0" pattern="[\d\+\,\ ]+" />
       </td>
       <td>
 	<span class="formexample">e.g. 2 or 2 4 6 or 1+10 4</span>
@@ -55,7 +57,7 @@
 	<label>character(s)</label>
       </td>
       <td>
-	<input type="text" id="character_field" placeholder="0" pattern="[\d\+\,\ ]+" />
+	<input type="text" id="character_field" name="character_field" value="{{ args.character_field }}" placeholder="0" pattern="[\d\+\,\ ]+" />
       </td>
       <td>
 	<span class="formexample">e.g. 2 or 2 4 6 or 0+23 4</span>
