--- a/lmfdb/jacobi_forms/templates/eigenforms/jf-table.html
+++ b/lmfdb/jacobi_forms/templates/eigenforms/jf-table.html
@@ -8,7 +8,14 @@
 </pre>
 #}
 
-<p>Results found: {{ response.hits }}</p>
+{% if response.hits <= response.limit %}
+<h2>Results ({{ response.hits }} matches)</h2>
+{% else %}
+<h2> Results (displaying matches {{ response.skip + 1 }}-{{ response.skip + response.limit }} of {{ response.hits }})
+    <a href="#" class="navlink" onclick="submit_form('re-search', {{ response.skip - response.limit }});return false">Previous</A>
+    <a href="#" class="navlink" onclick="submit_form('re-search', {{ response.skip + response.limit }});return false">Next</A>
+</h2>
+{% endif %}
 
 {% for phi in response.data %}
 <h1>Eigenform {{ phi.label() }}</h1>
